Partially fix issues with interactive map page and dark themes (Makes pages more readable)

--- a/css/styleDark.css
+++ b/css/styleDark.css
@@ -431,3 +431,10 @@ textarea:focus {
     background-color: #121212;
     color: white;
 }
+
+.card-text{
+    color: white;
+}
+.card-title{
+    color: white;
+}
