--- a/css/styleMidnight.css
+++ b/css/styleMidnight.css
@@ -433,3 +433,10 @@ textarea:focus {
     background-color: #000000;
     color: white;
 }
+
+.card-text{
+    color: white;
+}
+.card-title{
+    color: white;
+}
